* Fix display on mobile device.

--- a/less/main.less
+++ b/less/main.less
@@ -7,6 +7,7 @@
 }
 body {
   background-color: #f9f9f9;
+  min-width: 1440px;
 }
 ul, li, ol, dl {
   list-style: none;
